# clip-smith

./: .gitignore  .prettierignore  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  clipboar.service.ts  main.tsx  monitor-clipboard.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/libs/: mod.rs
src-tauri/src/libs/db/: cliboard_store.rs  mod.rs
src-tauri/src/libs/keyboard/: mod.rs  press_ctrl_v.rs
src/actions/: escape.ts  handle-key-down.ts  index.ts  init.ts
src/components/: clip-board-list.tsx  search-form.tsx
src/interface/: clib-board-history.interface.ts  fuzzy-filter.interface.ts  index.ts
src/service/: clipboar.service.ts  clipboard.service.ts  index.ts
